--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.1"
   },
